PROD_10-24-19/force-app/main/default/objects/Portfolio_Asset__c/Portfolio_Asset__c.object-meta.xml
<CustomObject>
    <label>Portfolio Asset</label>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolio Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>