PROD_10-24-19/force-app/main/default/objects/Portfolio_Asset__c/fields/Asset_City__c.field-meta.xml
<CustomField>
    <fullName>Asset_City__c</fullName>
    <label>Asset City</label>
    <length>200</length>
    <type>Text</type>
</CustomField>