PROD_10-24-19/force-app/main/default/objects/Portfolio_Asset__c/fields/Asset_Street__c.field-meta.xml
<CustomField>
    <fullName>Asset_Street__c</fullName>
    <label>Asset Street</label>
    <length>200</length>
    <type>Text</type>
</CustomField>